<resources>
    <string name="app_name" translatable="false">AllOne</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Settings</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="balance_double">Баланс:</string>
    <string name="status">Статус:</string>
    <string name="only_mail">Только почта</string>
    <string name="time_on_line">Время на линии:</string>
    <string name="requests_for_tomorrow">Запросы на завтра:</string>
    <string name="intercity_mail">Почта межгород</string>
    <string name="you_in_a_line">Вы на линии</string>
    <string name="passenger_seat">Пассажирское место</string>
    <string name="client">Клиент</string>
    <string name="travel_date">Дата поездки</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="NoDate">Нет дата</string>
    <string name="NoTime">Нет время</string>
    <string name="collect_parcels">Собрать посылки</string>
    <string name="parcel">Посылка</string>
    <string name="envelope">Конверт</string>
    <string name="volume">Объем:</string>
    <string name="balance">Баланс</string>
    <string name="notification">Уведомление</string>
    <string name="chooseLanguage">Выберите язык</string>
    <string name="allOne" translatable="false">AllOne</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="uzbek" translatable="false">O\'zbek</string>
    <string name="enterToSystem">Войти в систему</string>
    <string name="viaPhoneNumber">Через номер</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="enterSomething" translatable="false">+998</string>
    <string name="signIn">Войти</string>
    <string name="giveInfo">На ваш номер будет отрален SMS с кодом</string>
    <string name="register">Регистрация</string>
    <string name="entrance">Вход</string>
    <string name="numberDoesntExist">В систему отсуствует такой номер</string>
    <string name="enterCode">Введите код-пароль</string>
    <string name="sendSMStoNum">На ваш номер +998-xx-xxx-xxxx отправлен SMS с кодом</string>
    <string name="sendAgain"><u>Отправить заново</u></string>
    <string name="continue_">Продолжите</string>
    <string name="Active">Активность</string>
    <string name="rating">Рейтинг:</string>
    <string name="interest_rate">Процентная ставка:</string>
    <string name="transport">Транспорт</string>
    <string name="earning">Заработок</string>
    <string name="night_mode">Ночной режим</string>
    <string name="more_details">Подробнее</string>
    <string name="card_brand">Марка авто:</string>
    <string name="color">Цвет:</string>
    <string name="number">Номер:</string>
    <string name="year">Год:</string>
    <string name="registration_date">Дата регистрации</string>
    <string name="license_term">Срок лицензии</string>
    <string name="license_number">Номер лицензии:</string>
    <string name="general">Общее</string>
    <string name="from_taxi">От Такси</string>
    <string name="from_parcels">От посылок</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="client_card">Карта клиента:</string>
    <string name="driver_card">Карта водителя:</string>
    <string name="departure_date">Дата отбытия:</string>
    <string name="passengers">Пасажиров:</string>
    <string name="income">Заработок</string>
    <string name="language">Язык</string>
    <string name="settings">Настройки</string>
    <string name="night_mod">Ночной режим</string>
    <string name="logout">Выйти</string>
    <string name="support">Тех поддержка</string>
    <string name="change_location">Изменить постоянный маршрут</string>
    <string name="navigator_settings">Настройки навигаторов</string>
    <string name="show_card_in_new_order">Показать карту в новом заказе</string>
    <string name="voice_notification">Голосовое уведомление</string>
    <string name="payment_methods">Способы оплаты</string>
    <string name="about_app">О программе</string>
    <string name="from_where">Откуда:</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet Ut sed viverra senectus ut accumsan in tempor</string>
    <string name="back">Назад</string>
    <string name="cash_method">Наличными</string>
    <string name="corporate">Корпоративный</string>
    <string name="inside_of_city">Такси внутри города</string>
    <string name="tariff_inside">Внутри городской пакет</string>
    <string name="mail_inside">Почта внутри города</string>
    <string name="set_tariff">Настроить</string>
    <string name="regional_tariff">Региональный пакет</string>
    <string name="international_taxi">Международный такси</string>
    <string name="international_mail">Междгородская почта</string>
    <string name="more">Подробнее</string>
    <string name="international_tariff">Международный пакет</string>
    <string name="tariffs">Тарифы</string>
    <string name="route">Маршрут</string>
    <string name="lorem_ipsum_dolor" translatable="false">Lorem In augue quise feugiat enim nibh faucibus.</string>
    <string name="delivery">Доставка</string>
    <string name="women">Женский</string>
    <string name="comfort">Комфорт</string>
    <string name="economic">Эконом</string>
    <string name="women_tariff">Женский тариф</string>
    <string name="need_to_check">Вам требуется пройти проверку в наших центрах</string>
    <string name="profile">Профиль</string>
    <string name="history">Profil</string>
    <string name="earnings">Заработок</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="choose_region">Выберите регион</string>
    <string name="search">Поиск</string>
    <string name="bonus_points">Бонусные баллы:</string>
    <string name="go_to">Перейти</string>
    <string name="collect_bonuses">Как набрать бонусы</string>
    <string name="to_use">Как использовать</string>
    <string name="your_gender">Ваш пол</string>
    <string name="your_birthday">День вашего рождения</string>
    <string name="change_my_details">Изменить мои данные</string>
    <string name="change_my_phone">Изменить номер телефона</string>
    <string name="change_my_photo">Изменить фото профиля</string>
    <string name="language_app">Язык программы</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="choose_gender">Веберите пол</string>
    <string name="orders_history">История заказов</string>
    <string name="bonuses">Бонусы</string>
    <string name="bind_card">Привязка карты</string>
    <string name="info">Информация</string>
    <string name="bonus_balls">Бонусные баллы</string>
    <string name="how_to_get">Как получить?</string>
    <string name="how_to_get_bonus">Как набрать бонусы</string>
    <string name="how_to_use">Как использовать</string>
    <string name="transaction_history">История транзакции</string>
    <string name="card_binding">Привязать карту</string>
    <string name="enter_card_data">Ввести данные карты</string>
    <string name="card_title">Название карты</string>
    <string name="change_route">Изменить постоянный маршрут</string>
    <string name="tarifs">Тарифы</string>
    <string name="show_map_order">Показать карту в новом заказе</string>
    <string name="choose_time">Выберите время</string>
    <string name="from">От</string>
    <string name="enter_time">Введите время</string>
    <string name="to">До</string>
    <string name="accept">Принять</string>
    <string name="card_number">Номер карты</string>
    <string name="valid_date">Срок действия</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="card_unavailable">*Отсутсвует такая карта</string>
    <string name="fill_field_correct">*Заполните все данные корректно</string>
    <string name="english" translatable="false">English</string>
    <string name="user_details">Ваши данные</string>
    <string name="your_name">Ваше имя</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="your_age">День вашего рождения</string>
    <string name="birth_day">Дата рождения</string>
    <string name="chose_gender">Веберите пол</string>
    <string name="man">Мужской</string>
    <string name="day_of_birth">Дата рождения</string>
    <string name="month">месяц</string>
    <string name="day">День</string>
    <string name="welcome_A">Добрый день </string>
    <string name="where_do_you_go">Куда вы хотите доехать?</string>
    <string name="active_order">Ваши активные заказы</string>
    <string name="tashkent" translatable="false">Ташкент</string>
    <string name="samarkand" translatable="false">Самарканд</string>
    <string name="news">Новости</string>
    <string name="news_title" translatable="false">news</string>
    <string name="news_description">С нами Ваша поездка веселее!</string>
    <string name="about_prog">О программе</string>
    <string name="_12_1996" translatable="false">12 Март 1996</string>
    <string name="nect">Продолжить</string>
    <string name="bonus_card">Бонусная карта</string>
    <string name="orders">Заказать</string>
    <string name="type_something">Введите что-то</string>
    <string name="namee">Имя</string>
    <string name="how_to_get_bonuses">Как получить бонусы</string>
    <string name="lorem_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        In augue quis facilisi congue fames viverra. Cursus arcu placerat ipsum at.
        Pharetra leo nisi, auctor viverra consectetur proin sed morbi. Vulputate
        adipiscing augue eget volutpat fermentum, lacus ac, suspendisse.
        Scelerisque vitae ut integer mi odio eu, dignissim est consectetur.
        In lacinia leo duis eget./n      Dignissim faucibus ac risus id leo suspendisse viverra.
        Porta nulla egestas maecenas gravida at scelerisque turpis erat. Mi tellus neque cras
        viverra tellus. Quis viverra nibh orci nisi. Vulputate sed congue nisi morbi lacus
        nulla duis. Nisi bibendum tincidunt ut lorem lectus habitasse non. Donec vel velit
        gravida nisi, arcu quis integer sagittis, et. Eu dolor eu blandit mi. Dignissim et urna,
        mollis tristique. Id suspendisse nec nulla a urna leo elit. Nulla suscipit ipsum
        vestibulum tristique aenean lacus, ac aliquam, justo. Lacus venenatis ut dictumst
        morbi turpis maecenas consectetur ut.
        Egestas pretium ut morbi sed cursus varius eget fames bibendum. Nunc facilisis amet
        curabitur montes, et aliquet nunc. Tristique in elementum eu commodo, est risus,
        ut aenean etiam. At sagittis hac ipsum lacus, non, aliquam ipsum urna velit. Consequat
        porttitor massa faucibus et. Dolor viverra ut ultrices mattis. Eu, nullam tellus ultrices
        volutpat pretium felis sit. Blandit donec arcu, feugiat enim nibh faucibus.
</string>
    <string name="receiver">Получатель</string>
    <string name="comments">Комментарий</string>
    <string name="lastname">Фамилия</string>
    <string name="gender">Пол</string>
    <string name="payment_methodd">Способ оплаты</string>
    <string name="adwawdwa">Язык приложения</string>
</resources>