<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.profile.FragmentGetBonusText"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/margin_padding_4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_padding_12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/margin_padding_12dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/how_to_get_bonuses"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_bold"
        android:text="@string/bonuses"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_12dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_regular"
        android:layout_marginHorizontal="@dimen/margin_padding_16"

        android:text="@string/lorem_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15sp" />


    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/margin_padding_16"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_padding_24dp"
        android:background="@drawable/background_white_corner_12"
        android:backgroundTint="@color/green"
        android:padding="@dimen/margin_padding_16dp"
        android:text="@string/back"
        android:textAppearance="@style/boldStyleLight"
        android:textSize="@dimen/text_size_18sp" />


</androidx.appcompat.widget.LinearLayoutCompat>