<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/relativeLayout"
    android:layout_height="match_parent"
    tools:context=".fragments.login.registration.RegisterFragment">

    <RelativeLayout
        android:elevation="@dimen/margin_padding_4dp"
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backToHome"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="@dimen/margin_padding_12dp"
            android:src="@drawable/ic_arrow_left"
            android:layout_marginStart="@dimen/margin_padding_12dp"
            android:layout_centerVertical="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            android:fontFamily="@font/inter_medium"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="45dp"
        android:layout_below="@id/toolbar"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/user_details"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_below="@+id/user_details"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/margin_padding_16"
            android:layout_marginEnd="@dimen/margin_padding_16"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namee"
                android:textAppearance="@style/boldStyle"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:background="@drawable/background_white_corner_12"
                android:backgroundTint="@color/grey"
                android:drawableEnd="@drawable/ic_user"
                android:fontFamily="@font/inter_regular"
                android:hint="Максим"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:imeOptions="actionGo"
                android:padding="@dimen/margin_padding_16dp"
                android:paddingStart="@dimen/margin_padding_24dp"
                android:paddingEnd="@dimen/margin_padding_24dp"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:textAppearance="@style/boldStyle"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_corner_12"
                android:padding="@dimen/margin_padding_16dp"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:id="@+id/txt_lastname"
                android:backgroundTint="@color/grey"
                android:textColor="?android:attr/textColorPrimary"
                android:paddingStart="@dimen/margin_padding_24dp"
                android:paddingEnd="@dimen/margin_padding_24dp"
                android:hint="Юсупов"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_size_14sp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:drawableEnd="@drawable/ic_user" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"

                android:layout_marginTop="@dimen/margin_padding_16"
                android:textAppearance="@style/boldStyle"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/your_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_corner_12"
                android:padding="@dimen/margin_padding_16dp"
                android:backgroundTint="@color/grey"
                android:textColor="?android:attr/textColorPrimary"
                android:paddingStart="@dimen/margin_padding_24dp"
                android:paddingEnd="@dimen/margin_padding_24dp"
                android:hint="@string/male"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_size_14sp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:drawableRight="@drawable/ic_arrow_down" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_birth"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:textAppearance="@style/boldStyle"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/your_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_white_corner_12"
                android:padding="@dimen/margin_padding_16dp"
                android:backgroundTint="@color/grey"
                android:textColor="?android:attr/textColorPrimary"
                android:paddingStart="@dimen/margin_padding_24dp"
                android:paddingEnd="@dimen/margin_padding_24dp"
                android:hint="@string/_12_1996"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_size_14sp"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:drawableEnd="@drawable/ic_arrow_right" />


        </LinearLayout>


    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_padding_16"
        android:layout_marginEnd="@dimen/margin_padding_16"
        android:background="@drawable/background_white_corner_12"
        android:backgroundTint="@color/green"
        android:padding="@dimen/margin_padding_16dp"
        android:text="@string/nect"
        android:layout_marginBottom="@dimen/margin_padding_24dp"
        android:textAppearance="@style/boldStyleLight"
        android:textSize="@dimen/text_size_18sp" />

</RelativeLayout>